# WEBSERVICE-courseworkwork2

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: architecture.md  genai_declaration.md  submission_checklist.md  video_script.md
src/: crawler.py  indexer.py  main.py  models.py  search.py  text_processing.py
tests/: __init__.py  test_crawler.py  test_indexer.py  test_main.py  test_search.py  test_text_processing.py
tests/fixtures/: page1.html  page2.html
